objects/ANS_Message_Repository__c/ANS_Message_Repository__c.object-meta.xml
<CustomObject>
    <label>ANS Message Repository</label>
    <nameField>
        <displayFormat>ANS-{0000000000}</displayFormat>
        <label>ANS Message Repository Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANS Message Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>