objects/ANS_Message_Repository__c/fields/ANS_Code__c.field-meta.xml
<CustomField>
    <fullName>ANS_Code__c</fullName>
    <label>ANS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>