objects/ANS_Message_Repository__c/fields/ANS_Email_Advisor_Code__c.field-meta.xml
<CustomField>
    <fullName>ANS_Email_Advisor_Code__c</fullName>
    <label>ANS Email Advisor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>