objects/ANS_Message_Repository__c/fields/ANS_Email_Policy_Owner__c.field-meta.xml
<CustomField>
    <fullName>ANS_Email_Policy_Owner__c</fullName>
    <label>ANS Email Policy Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>