objects/ANS_Message_Repository__c/fields/ANS_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ANS_Email_Recipient__c</fullName>
    <description>This field contains the Recipient name for workflow based on criteria</description>
    <label>ANS_Email_Recipient</label>
    <type>Email</type>
</CustomField>