objects/ANS_Message_Repository__c/fields/ANS_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>ANS_Email_Subject__c</fullName>
    <description>This field contains the subject line for workflow rule</description>
    <label>ANS_Email_Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>