objects/ANS_Message_Repository__c/fields/ANS_Email_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ANS_Email_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will decide wheather email notification for post-sale cases will trigger or not</description>
    <label>ANS Email Trigger</label>
    <type>Checkbox</type>
</CustomField>