objects/ANS_Message_Repository__c/fields/businessArea__c.field-meta.xml
<CustomField>
    <fullName>businessArea__c</fullName>
    <label>Business Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>