objects/ANS_Message_Repository__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>