objects/ANS_Message_Repository__c/fields/CAS_Has_Message_Failed__c.field-meta.xml
<CustomField>
    <fullName>CAS_Has_Message_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAS Has Message Failed will be marked as true when CAS service get request successfully.</description>
    <label>CAS Has Message Failed</label>
    <type>Checkbox</type>
</CustomField>