objects/ANS_Message_Repository__c/fields/CAS_To_Be_Processed__c.field-meta.xml
<CustomField>
    <fullName>CAS_To_Be_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field to be marked true when latest required information is passed to CAS if the Call Result of a Post-sale case by day end is one of the below
	a) 5th Attempt Fail
	b) Unwilling
	c) Unreachable customer after Advisor Contact
	d) Unable To Contact Customer</description>
    <label>CAS_To_Be_Processed</label>
    <type>Checkbox</type>
</CustomField>