objects/ANS_Message_Repository__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ANS Message Repository</relationshipLabel>
    <relationshipName>ANS_Message_Repository</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>