objects/ANS_Message_Repository__c/fields/Custom_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Message__c</fullName>
    <label>Custom Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>