objects/ANS_Message_Repository__c/fields/Default_Value_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_of_Transaction__c</fullName>
    <label>Default Value of Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post-sale Call</fullName>
            </value>
            <value>
                <fullName>Customer Inbound Call</fullName>
            </value>
            <value>
                <fullName>Advisor Inbound Call</fullName>
            </value>
            <value>
                <fullName>Re-assigned Customer Management</fullName>
            </value>
            <value>
                <fullName>Orphan Program</fullName>
                <isActive>false</isActive>
                <label>Orphan Program</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>