objects/ANS_Message_Repository__c/fields/Has_Message_Failed__c.field-meta.xml
<CustomField>
    <fullName>Has_Message_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Message Failed ?</label>
    <type>Checkbox</type>
</CustomField>