objects/ANS_Message_Repository__c/fields/Latest_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Id__c</fullName>
    <label>Latest Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>