objects/ANS_Message_Repository__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <label>Response Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>