objects/ANS_Message_Repository__c/fields/Send_To_Immediate_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Immediate_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Immediate Supervisor</label>
    <type>Checkbox</type>
</CustomField>