objects/ANS_Message_Repository__c/fields/Standard_Message__c.field-meta.xml
<CustomField>
    <fullName>Standard_Message__c</fullName>
    <label>Standard Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>