objects/ANS_Message_Repository__c/fields/Supervisor_Standard_Message__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Standard_Message__c</fullName>
    <label>Supervisor Standard Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>