objects/ANS_Message_Repository__c/fields/To_Be_Processed__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Processed</label>
    <type>Checkbox</type>
</CustomField>