objects/ANS_Message_Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>To_Be_Processed__c</columns>
    <columns>Call_Result__c</columns>
    <columns>ANS_Code__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Default_Value_of_Transaction__c</columns>
    <columns>Display_in_AWS_To_Do_List__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Source__c</columns>
    <columns>ANS_Email_Recipient__c</columns>
    <columns>CAS_To_Be_Processed__c</columns>
    <columns>CAS_Has_Message_Failed__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>